--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -79,6 +79,7 @@ layout: default.hbs
 - [geuis/helium-css](https://github.com/geuis/helium-css)
 - [jorgebastida/glue](https://github.com/jorgebastida/glue)
 - [Ensighten/grunt-spritesmith](https://github.com/Ensighten/grunt-spritesmith)
+- [addyosmani/critical](https://github.com/addyosmani/critical)
 
 
 #### JavaScript
