--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,6 @@
 body	{
 	font-family: helvetica, sans-serif, arial;
-	background-color: #FFF;
+	background-color: #EEE;
 	color: #333;
 	line-height: 1.4;
 }
