--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,16 +2,16 @@
 body	{
 	font-family: helvetica, sans-serif, arial;
 	background-color: #EEE;
-	color: #333;
+	color: #555;
+	font-size: 14px;
 	line-height: 1.4;
 }
 
 a	{
 	text-decoration: none;
-	color: #40E;
+	color: #4183DD;
 	&:hover	{
-		color: #EEE;
-		background-color: #40E;
+		text-decoration: underline;
 	}
 }
 
