--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -4,7 +4,9 @@
 		<meta charset="utf-8">
 		<title>Performance notes</title>
 		<link rel="stylesheet" href="./css/lib/normalize.css">
-		<link rel="stylesheet" href="./css/index.css">
+		{{#styles}}
+		<link rel="stylesheet" href="./css/{{.}}" />
+		{{/styles}}
 	</head>
 	<body>
 		<div class="wrapper">
@@ -13,5 +15,8 @@
 			{{>footer}}
 		</div>
 		<script src="./js/lib/jquery.min.js"></script>
+		{{#scripts}}
+		<script src="./js/{{.}}"></script>
+		{{/scripts}}
 	</body>
 </html>
