--- a/src/less/index.less
+++ b/src/less/index.less
@@ -22,5 +22,9 @@ ul, ol	{
 }
 
 .wrapper	{
-	padding: 0 10px;
+	max-width: 800px;
+	margin: 0 auto;
+}
+.header	{
+	border-bottom: 1px solid #DDD;
 }
