--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,4 +1,3 @@
-
 body	{
 	font-family: helvetica, sans-serif, arial;
 	background-color: #EEE;
@@ -21,10 +20,13 @@ ul, ol	{
 	padding: 0;
 }
 
+
 .wrapper	{
 	max-width: 800px;
 	margin: 0 auto;
+	padding: 10px 0;
 }
 .header	{
 	border-bottom: 1px solid #DDD;
 }
+
