--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -47,6 +47,7 @@ scripts: []
 - [uncss:  Find Unused CSS](http://davidwalsh.name/uncss)
 - [CSS Sprite画像はDataURI画像にすべきか？ — MOL](http://t32k.me/mol/log/sprite-image-vs-inline-image/)
 - [CSS performance test: Flexbox v CSS Table – Fight! - Author and responsive web developer Ben Frain](http://benfrain.com/css-performance-test-flexbox-v-css-table-fight/)
+- [【Sassで解決】CSSの@importはどれだけ悪影響なのか自分で試してみる ｜ Developers.IO](http://dev.classmethod.jp/ria/html5/css-import-no-parallel-load-sass/)
 
 
 ### Slide
