--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -26,6 +26,7 @@ scripts: []
 - [How gzip compression works - Make the Web Faster — Google Developers](https://developers.google.com/speed/articles/gzip)
 - [Scrolling Performance - HTML5 Rocks](http://www.html5rocks.com/en/tutorials/speed/scrolling/?redirect_from_locale=ja)
 - [Lazyload Images - PageSpeed Module — Google Developers](https://developers.google.com/speed/pagespeed/service/LazyloadImages)
+- [Introduction to the Resource Timing API](http://www.sitepoint.com/introduction-resource-timing-api/)
 
 
 #### JavaScript
