--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -7,6 +7,7 @@
 		{{#styles}}
 		<link rel="stylesheet" href="./css/{{.}}" />
 		{{/styles}}
+		<!--[if lt IE 9]><script src="./js/lib/html5shiv.js"></script><![endif]-->
 	</head>
 	<body>
 		<div class="wrapper">
