--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,31 +1,11 @@
-body	{
-	font-family: helvetica, sans-serif, arial;
-	background-color: #EEE;
-	color: #555;
-	font-size: 14px;
-	line-height: 1.4;
-}
-
-a	{
-	text-decoration: none;
-	color: #666;
-	&:hover	{
-		text-decoration: underline;
-	}
-}
-
-ul, ol	{
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
+@import "base/base";
 
 .wrapper	{
 	max-width: 800px;
 	margin: 0 auto;
 	padding: 10px 0;
 }
+
 .header	{
 	border-bottom: 1px solid #DDD;
 }
