--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -27,6 +27,8 @@ scripts: []
 - [Scrolling Performance - HTML5 Rocks](http://www.html5rocks.com/en/tutorials/speed/scrolling/?redirect_from_locale=ja)
 - [Lazyload Images - PageSpeed Module — Google Developers](https://developers.google.com/speed/pagespeed/service/LazyloadImages)
 - [Introduction to the Resource Timing API](http://www.sitepoint.com/introduction-resource-timing-api/)
+- [How To Make Your Websites Faster On Mobile Devices | Smashing Magazine](http://www.smashingmagazine.com/2013/04/03/build-fast-loading-mobile-website/)
+- [Navigation Timingを使ってパフォーマンス計測（Google アナリティクス） — MOL](http://t32k.me/mol/log/measuring-web-performance/)
 
 
 #### JavaScript
@@ -60,6 +62,8 @@ scripts: []
 - [GitHub's CSS Performance // Speaker Deck](https://speakerdeck.com/jonrohan/githubs-css-performance)
 - [Supersonic JavaScript // Speaker Deck](https://speakerdeck.com/ariya/supersonic-javascript)
 - [Keith and Marios Guide to Fast Websites // Speaker Deck](https://speakerdeck.com/keithpitt/keith-and-marios-guide-to-fast-websites)
+- [State of the resource timing api](http://www.slideshare.net/turbobytes/state-of-the-resource-timing-api)
+- [Measuring Web Performance - 自己満足で終わらないためのパフォーマンス計測 -](http://www.slideshare.net/t32k/measuring-web-performance-15915024)
 
 ### Tool
 
