--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -9,6 +9,7 @@ scripts: []
 
 ### Article
 
+- [High Performance Web Sites](http://stevesouders.com/hpws/rules.php)
 - [ブラウザのしくみ: 最新ウェブブラウザの内部構造 - HTML5 Rocks](http://www.html5rocks.com/ja/tutorials/internals/howbrowserswork/)
 - [Automating Web Performance Measurement - HTML5Rocks Updates](http://updates.html5rocks.com/2014/06/Automating-Web-Performance-Measurement)
 - [Reflows & Repaints: CSS Performance making your JavaScript slow? | Stubbornella](http://www.stubbornella.org/content/2009/03/27/reflows-repaints-css-performance-making-your-javascript-slow/)
@@ -29,6 +30,7 @@ scripts: []
 - [Introduction to the Resource Timing API](http://www.sitepoint.com/introduction-resource-timing-api/)
 - [How To Make Your Websites Faster On Mobile Devices | Smashing Magazine](http://www.smashingmagazine.com/2013/04/03/build-fast-loading-mobile-website/)
 - [Navigation Timingを使ってパフォーマンス計測（Google アナリティクス） — MOL](http://t32k.me/mol/log/measuring-web-performance/)
+- [On Mobile, Data URIs are 6x Slower than Source Linking (New Research)](http://www.mobify.com/blog/data-uris-are-slow-on-mobile/)
 
 
 #### JavaScript
