--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -82,6 +82,7 @@ scripts: []
 #### HTML
 
 - [gruntjs/grunt-contrib-htmlmin](https://github.com/gruntjs/grunt-contrib-htmlmin)
+- [kangax/html-minifier](https://github.com/kangax/html-minifier)
 
 
 #### CSS
@@ -93,6 +94,7 @@ scripts: []
 - [jorgebastida/glue](https://github.com/jorgebastida/glue)
 - [Ensighten/grunt-spritesmith](https://github.com/Ensighten/grunt-spritesmith)
 - [addyosmani/critical](https://github.com/addyosmani/critical)
+- [GoalSmashers/clean-css](https://github.com/GoalSmashers/clean-css)
 
 
 #### JavaScript
@@ -100,7 +102,6 @@ scripts: []
 - [jsPerf: JavaScript performance playground](http://jsperf.com/)
 - [UglifyJS — JavaScript parser, compressor, minifier written in JS](http://lisperator.net/uglifyjs/)
 - [gruntjs/grunt-contrib-uglify](https://github.com/gruntjs/grunt-contrib-uglify)
-- [Lazy Load Plugin for jQuery](http://www.appelsiini.net/projects/lazyload)
 
 
 #### Image
