--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -31,6 +31,7 @@ scripts: []
 - [How To Make Your Websites Faster On Mobile Devices | Smashing Magazine](http://www.smashingmagazine.com/2013/04/03/build-fast-loading-mobile-website/)
 - [Navigation Timingを使ってパフォーマンス計測（Google アナリティクス） — MOL](http://t32k.me/mol/log/measuring-web-performance/)
 - [On Mobile, Data URIs are 6x Slower than Source Linking (New Research)](http://www.mobify.com/blog/data-uris-are-slow-on-mobile/)
+- [HTML5 Techniques for Optimizing Mobile Performance - HTML5 Rocks](http://www.html5rocks.com/en/mobile/optimization-and-performance/)
 
 
 #### JavaScript
