--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -7,33 +7,6 @@ scripts: []
 {{#markdown}}
 ## Links
 
-### Article
-
-- [High Performance Web Sites](http://stevesouders.com/hpws/rules.php)
-- [ブラウザのしくみ: 最新ウェブブラウザの内部構造 - HTML5 Rocks](http://www.html5rocks.com/ja/tutorials/internals/howbrowserswork/)
-- [Automating Web Performance Measurement - HTML5Rocks Updates](http://updates.html5rocks.com/2014/06/Automating-Web-Performance-Measurement)
-- [Reflows & Repaints: CSS Performance making your JavaScript slow? | Stubbornella](http://www.stubbornella.org/content/2009/03/27/reflows-repaints-css-performance-making-your-javascript-slow/)
-- [Long Life Web Performance Optimization ~ 心理学から考えるWebパフォーマンス ~ — MOL](http://t32k.me/mol/log/long-life-web-performance-optimization/)
-- [On Mobile, Data URIs are 6x Slower than Source Linking (New Research) | Mobify](http://www.mobify.com/blog/data-uris-are-slow-on-mobile/)
-- [パフォーマンス最適化 | CSS Radar | Little Books For Front End Developers](http://css.studiomohawk.com/optimization/2011/04/09/why_speed_matters/)
-- [コンテンツのロードを高速化するHTML5の「link prefetching」機能  «  DailyHckr](http://hylom.net/2010/06/03/html5_link_prefetch/)
-- [プログレッシブレンダリングでUXを向上させるJS非同期読み込みのベストプラクティス | ゆっくりと…](http://tokkono.cute.coocan.jp/blog/slow/index.php/xhtmlcss/best-practice-of-truly-async-js-loading/)
-- [サイト速度とonload再考 | ゆっくりと…](http://tokkono.cute.coocan.jp/blog/slow/index.php/xhtmlcss/rivisiting-onload/)
-- [How the Browser Pre-loader Makes Pages Load Faster - Andy Davies](http://andydavies.me/blog/2013/10/22/how-the-browser-pre-loader-makes-pages-load-faster/)
-- [ReFlowの原因とマークアップの最適化 «  LINE Engineers' Blog](http://tech.naver.jp/blog/?p=379)
-- [ブラウザ動作の理解－リフローとリペイント及びその最適化 | ゆっくりと…](http://tokkono.cute.coocan.jp/blog/slow/index.php/web-technology/reflow-and-repaint-in-browser/)
-- [CSS vs. JS Animation: Which is Faster?](http://davidwalsh.name/css-js-animation)
-- [サイト高速化の「戦略」と「戦術」- GradeAのその先へ | ゆっくりと…](http://tokkono.cute.coocan.jp/blog/slow/index.php/xhtmlcss/strategy-and-tactics-for-faster-site/)
-- [How gzip compression works - Make the Web Faster — Google Developers](https://developers.google.com/speed/articles/gzip)
-- [Scrolling Performance - HTML5 Rocks](http://www.html5rocks.com/en/tutorials/speed/scrolling/?redirect_from_locale=ja)
-- [Lazyload Images - PageSpeed Module — Google Developers](https://developers.google.com/speed/pagespeed/service/LazyloadImages)
-- [Introduction to the Resource Timing API](http://www.sitepoint.com/introduction-resource-timing-api/)
-- [How To Make Your Websites Faster On Mobile Devices | Smashing Magazine](http://www.smashingmagazine.com/2013/04/03/build-fast-loading-mobile-website/)
-- [Navigation Timingを使ってパフォーマンス計測（Google アナリティクス） — MOL](http://t32k.me/mol/log/measuring-web-performance/)
-- [On Mobile, Data URIs are 6x Slower than Source Linking (New Research)](http://www.mobify.com/blog/data-uris-are-slow-on-mobile/)
-- [HTML5 Techniques for Optimizing Mobile Performance - HTML5 Rocks](http://www.html5rocks.com/en/mobile/optimization-and-performance/)
-
-
 #### JavaScript
 
 - [Loading Scripts Without Blocking | High Performance Web Sites](http://www.stevesouders.com/blog/2009/04/27/loading-scripts-without-blocking/)
@@ -54,6 +27,7 @@ scripts: []
 - [CSS Sprite画像はDataURI画像にすべきか？ — MOL](http://t32k.me/mol/log/sprite-image-vs-inline-image/)
 - [CSS performance test: Flexbox v CSS Table – Fight! - Author and responsive web developer Ben Frain](http://benfrain.com/css-performance-test-flexbox-v-css-table-fight/)
 - [【Sassで解決】CSSの@importはどれだけ悪影響なのか自分で試してみる ｜ Developers.IO](http://dev.classmethod.jp/ria/html5/css-import-no-parallel-load-sass/)
+- [mdo/css-perf](https://github.com/mdo/css-perf)
 
 
 ### Slide
