--- a/src/pages/bookmarks.hbs
+++ b/src/pages/bookmarks.hbs
@@ -5,9 +5,37 @@ scripts: []
 ---
 
 {{log bookmarks.article}}
-<h2>Article</h2>
-<ul>
-{{#each bookmarks.article}}
-	<li><a href="{{url}}">{{title}}</a></li>
-{{/each}}
-</ul>
+<div>
+	<h2>Article</h2>
+	<ul>
+	{{#each bookmarks.article.noclassification}}
+		<li><a href="{{url}}">{{title}}</a></li>
+	{{/each}}
+	</ul>
+
+	<div>
+		<h3>JavaScript</h3>
+		<ul>
+		{{#each bookmarks.article.javascript}}
+			<li><a href="{{url}}">{{title}}</a></li>
+		{{/each}}
+		</ul>
+	</div>
+
+	<div>
+		<h3>CSS</h3>
+		<ul>
+		{{#each bookmarks.article.css}}
+			<li><a href="{{url}}">{{title}}</a></li>
+		{{/each}}
+		</ul>
+	</div>
+</div>
+<div>
+	<h2>Slide</h2>
+	<ul>
+	{{#each bookmarks.slide.noclassification}}
+		<li><a href="{{url}}">{{title}}</a></li>
+	{{/each}}
+	</ul>
+</div>
