--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -41,7 +41,7 @@ scripts: []
 <div>
 	<h2>Tool</h2>
 	<ul>
-	{{#each bookmarks.slide.noclassification}}
+	{{#each bookmarks.tool.noclassification}}
 		<li><a href="{{url}}">{{title}}</a></li>
 	{{/each}}
 	</ul>
