--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -12,7 +12,9 @@
 	<body>
 		<div class="wrapper">
 			{{>header}}
+			<div class="content">
 			{{>body}}
+			</div>
 			{{>footer}}
 		</div>
 		<script src="./js/lib/jquery.min.js"></script>
