--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -1,5 +1,5 @@
 body	{
-	font-family: helvetica, sans-serif, arial;
+	font-family: "Helvetica Neue", helvetica, sans-serif, arial;
 	background-color: #FFF;
 	color: #444;
 	font-size: 14px;
@@ -20,7 +20,11 @@ ul, ol	{
 	padding: 0;
 }
 
-::selection {
-	background-color: #568DDF;
+h1, h2, h3	{
+	margin: 0;
+}
+
+::selection	{
+	background-color: #333;
 	color: #FFF;
 }
