--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,10 +3,20 @@
 .wrapper	{
 	max-width: 800px;
 	margin: 0 auto;
-	padding: 10px 0;
 }
 
 .header	{
+	padding: 30px 0;
 	border-bottom: 1px solid #DDD;
 }
 
+.content	{
+}
+
+.content-article	{
+	padding-bottom: 40px;
+}
+
+.content-article-headline	{
+	padding: 20px 0;
+}
