--- a/src/less/index.less
+++ b/src/less/index.less
@@ -6,11 +6,16 @@
 }
 
 .header	{
-	padding: 30px 0;
+	padding: 14px 0;
 	border-bottom: 1px solid #DDD;
 }
 
+.header-headline {
+	font-size: 16px;
+}
+
 .content	{
+	border-bottom: 1px solid #DDD;
 }
 
 .content-article	{
@@ -19,4 +24,8 @@
 
 .content-article-headline	{
 	padding: 20px 0;
+}
+
+.footer {
+	padding: 14px 0;
 }
