--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -48,6 +48,14 @@ scripts: ['index.js']
 			<li><a href="{{url}}">{{title}}</a></li>
 		{{/each}}
 		</ul>
+		<div>
+			<h4>JavaScript</h4>
+			<ul>
+			{{#each bookmarks.slide.javascript}}
+				<li><a href="{{url}}">{{title}}</a></li>
+			{{/each}}
+			</ul>
+		</div>
 	</div>
 	<div>
 		<h3>Tool</h3>
