--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,116 +1,4 @@
 ---
-layout: default.hbs
-styles: ['index.css']
-scripts: ['index.js']
 ---
 
-<div class="content-article">
-	<h2 class="content-article-headline">Bookmarks</h2>
-	<div>
-		<h3>Article</h3>
-		<ul>
-		{{#each bookmarks.article.noclassification}}
-			<li><a href="{{url}}">{{title}}</a></li>
-		{{/each}}
-		</ul>
-
-		<div>
-			<h4>JavaScript</h4>
-			<ul>
-			{{#each bookmarks.article.javascript}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-
-		<div>
-			<h4>CSS</h4>
-			<ul>
-			{{#each bookmarks.article.css}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-
-		<div>
-			<h4>HTML</h4>
-			<ul>
-			{{#each bookmarks.article.html}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-	</div>
-	<div>
-		<h3>Slide</h3>
-		<ul>
-		{{#each bookmarks.slide.noclassification}}
-			<li><a href="{{url}}">{{title}}</a></li>
-		{{/each}}
-		</ul>
-		<div>
-			<h4>JavaScript</h4>
-			<ul>
-			{{#each bookmarks.slide.javascript}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-	</div>
-	<div>
-		<h3>Tool</h3>
-		<ul>
-		{{#each bookmarks.tool.noclassification}}
-			<li><a href="{{url}}">{{title}}</a></li>
-		{{/each}}
-		</ul>
-		<div>
-			<h4>JavaScript</h4>
-			<ul>
-			{{#each bookmarks.tool.javascript}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-		<div>
-			<h4>CSS</h4>
-			<ul>
-			{{#each bookmarks.tool.css}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-		<div>
-			<h4>HTML</h4>
-			<ul>
-			{{#each bookmarks.tool.html}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-		<div>
-			<h4>Image</h4>
-			<ul>
-			{{#each bookmarks.tool.image}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-		<div>
-			<h4>Monitor</h4>
-			<ul>
-			{{#each bookmarks.tool.monitor}}
-				<li><a href="{{url}}">{{title}}</a></li>
-			{{/each}}
-			</ul>
-		</div>
-	</div>
-	<div>
-		<h3>Infographics</h3>
-		<ul>
-		{{#each bookmarks.infographic.noclassification}}
-			<li><a href="{{url}}">{{title}}</a></li>
-		{{/each}}
-		</ul>
-	</div>
-</div>
+<div></div>
