use normalize.scss

--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 	<head>
 		<meta charset="utf-8">
 		<title>Performance notes</title>
-		<link rel="stylesheet" href="./css/lib/normalize.css">
-		{{#styles}}
+
+		{{# styles }}
 		<link rel="stylesheet" href="./css/{{.}}" />
-		{{/styles}}
+		{{/ styles }}
 	</head>
 	<body>
 		<div class="wrapper">
-			{{>header}}
+			{{> header }}
 			<div class="content">
-			{{>body}}
+			{{> body}}
 			</div>
-			{{>footer}}
+			{{> footer}}
 		</div>
+
 		<script src="./js/lib/jquery.min.js"></script>
-		{{#scripts}}
+		{{# scripts }}
 		<script src="./js/{{.}}"></script>
-		{{/scripts}}
+		{{/ scripts }}
 	</body>
 </html>
