--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>{{ title }}</title>
+		{{# styles }}
+		<link rel="stylesheet" href="./css/{{.}}" />
+		{{/ styles }}
 	</head>
 	<body>
 		{{> body }}
