--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,7 +1,8 @@
 ---
-title: index
+title: Frontend Performance Optimization
 styles: ['index.css']
 ---
 
-<div>
+<div class="markdown">
+	{{md 'index' }}
 </div>
