--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,3 +1,22 @@
 @charset 'utf-8';
 
 @import '../vendor/normalize.scss/normalize';
+
+html, body  {
+  background-color: #fbfcff;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ';
+}
+
+a {
+  color: #333;
+}
+
+ul, ol  {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6  {
+  margin: 0;
+}
