--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,11 @@
 @charset 'utf-8';
 
 @import 'base/base';
+
+@import 'layouts/header';
+@import 'layouts/content';
+
+@import 'components/header';
+@import 'components/content';
+@import 'components/markdown';
+
