--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,8 +4,10 @@
 
 @import 'layouts/header';
 @import 'layouts/content';
+@import 'layouts/footer';
 
 @import 'components/header';
 @import 'components/content';
 @import 'components/markdown';
+@import 'components/footer';
 
