--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,6 +1,7 @@
 @charset 'utf-8';
 
 @import '../vendor/normalize.scss/normalize';
+@import '../vendor/font-awesome';
 
 html, body  {
   background-color: #fbfcff;
