--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,3 +1,5 @@
 <footer class="layout__footer footer">
-	<i class="fa fa-camera-retro"></i>
+	<a href="{{ homepage }}" class="footer__github__link">
+		<i class="fa fa-github fa-2x footer__github__icon"></i>
+	</a>
 </footer>
