--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,3 +3,13 @@
 .footer {
   background-color: #38424a;
 }
+
+.footer__github__link {
+  display: block;
+  margin: 0 auto;
+  width: 32px;
+}
+
+.footer__github__icon {
+  color: #fff;
+}
