--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -3,11 +3,11 @@
 		<div class="header__title">
 			<a href="/">Frontend Perf Notes</a>
 		</div>
-		<nav class="header__nav">
+		{{!--		<nav class="header__nav">
 			<ul class="header__nav__list">
 				<li><a href="#">Tools</a></li>
 				<li><a href="#">Notes</a></li>
 			</ul>
-		</nav>
+		</nav>--}}
 	</div>
 </header>
