--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -6,7 +6,7 @@
 
 		<link href='//fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		{{# styles }}
-		<link rel="stylesheet" href="/css/{{.}}" />
+		<link rel="stylesheet" href="./css/{{.}}" />
 		{{/ styles }}
 
 	</head>
