--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -17,6 +17,7 @@
 
 
 html, body  {
+  height: 100%;
   background-color: #fbfcff;
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN', 'メイリオ';
 }
