--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{{ title }}</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		<link href='//fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		{{# styles }}
