--- a/src/pages/tools/index.hbs
+++ b/src/pages/tools/index.hbs
@@ -1,8 +1,8 @@
 ---
 title: Tools
-styles: ['index.css']
+styles: ['tools.css']
 ---
 
 <div class="markdown">
-	{{md '../tools' }}
+	{{md 'tools' }}
 </div>
