--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,6 +2,8 @@
 
 @import '../vendor/normalize.scss/normalize';
 
+@import '../vendor/media-queries/media-queries';
+
 @import '../vendor/font-awesome/scss/variables';
 @import '../vendor/font-awesome/scss/core';
 @import '../vendor/font-awesome/scss/mixins';
