--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -10,6 +10,10 @@
   padding: 30px 160px;
   margin: 0;
   font-size: 2rem;
+
+  @include max-screen (768px) {
+    padding: 30px 5px;
+  }
 }
 
 .content__inner {
