--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -7,7 +7,7 @@
 
 		<link href='//fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		{{# styles }}
-		<link rel="stylesheet" href="{{../assets }}/css/{{.}}" />
+		<link rel="stylesheet" href="{{../assets }}/css/{{.}}.min.css" />
 		{{/ styles }}
 
 	</head>
