--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="layout__footer footer">
-	<a href="https://github.com/makotot/frontend-perf-notes" class="footer__github__link">
+	<a href="{{ pkg.homepage }}" class="footer__github__link">
 		<i class="fa fa-github fa-2x footer__github__icon"></i>
 	</a>
 </footer>
