--- a/src/partials/ga.hbs
+++ b/src/partials/ga.hbs
@@ -6,4 +6,5 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-58223460-1', 'auto');
 ga('send', 'pageview');
+ga('send', 'timing');
 </script>
