--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,7 +1,7 @@
 <header class="layout__header header">
 	<div class="header__inner">
 		<div class="header__title">
-			<a href="{{ config.gh_pages.url }}">Frontend Perf Notes</a>
+			<a href="{{ github-pages }}">Frontend Perf Notes</a>
 		</div>
 		{{!--		<nav class="header__nav">
 			<ul class="header__nav__list">
