--- a/src/partials/ga.hbs
+++ b/src/partials/ga.hbs
@@ -14,11 +14,15 @@ window.onload = function () {
 	setTimeout(function () {
 		var loadTime = timing.loadEventEnd - timing.navigationStart,
 			ttfb = timing.responseStart - timing.connectEnd,
-			dnsTime = timing.domainLookupEnd - timing.domainLookupStart;
+			dnsTime = timing.domainLookupEnd - timing.domainLookupStart,
+			tcp = timing.connectEnd - timing.connectStart,
+			dom = timing.domComplete - timing.domLoading;
 
 		ga('send', 'timing', 'navigationTiming', 'load', loadTime);
 		ga('send', 'timing', 'navigationTiming', 'ttfb', ttfb);
-		ga('send', 'timing', 'navigationTiming', 'dnsTime', dnsTime);
+		ga('send', 'timing', 'navigationTiming', 'dns', dnsTime);
+		ga('send', 'timing', 'navigationTiming', 'tcp', tcp);
+		ga('send', 'timing', 'navigationTiming', 'dom', dom);
 	}, 0);
 
 };
