--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -4,6 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{{ title }}</title>
+		<meta http-equiv="x-dns-prefetch-control" content="on">
+		<link rel="dns-prefetch" href="//fonts.googleapis.com">
+		<link rel="dns-prefetch" href="//www.google-analytics.com/">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		<link href='//fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
