--- a/src/scss/utils/_extend.scss
+++ b/src/scss/utils/_extend.scss
@@ -1,11 +1,11 @@
 @charset 'utf-8';
 
 %clearfix {
-  *zoom: 1;
 
-  &:before, &:after {
+  &:before,
+  &:after {
+    content: '';
     display: table;
-    content: "";
   }
 
   &:after {
