--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -1,20 +1,20 @@
 @charset 'utf-8';
 
 .content__header  {
-  padding: 20px 0;
   background-color: #38424a;
   color: #fff;
+  padding: 20px 0;
 }
 
 .content__headline  {
-  padding: 30px 160px;
-  margin: 0;
   font-size: 2rem;
+  margin: 0;
+  padding: 30px 160px;
 
   @include max-screen (768px) {
     padding: 30px 5px;
   }
 }
 
-.content__inner {
-}
+//.content__inner {
+//}
